@@ -1,6 +1,8 @@
 From version 0.5.0 to 0.5.1
 - call source referencing by request uri rather than resolved interface.
 - sms instant messaging multi-nodal and remote uri support.
+- cfwd busy can be used if no dnd or away forward target set.
+- sip publish messages now update internal presense status.
 
 From version 0.4.7 to 0.5.0
 - static routing tables with re-write rules and inter-node call support.
